# Aplicacoes_RAG

./: LICENSE  README.md
Projeto_1/: .gitignore  README.md  agentes_ia.py  app.py  log.py  pyproject.toml  rag.py
Projeto_1/static/css/: style.css
Projeto_1/static/js/: app.js
Projeto_1/templates/: index.html
Projeto_2/: .gitignore  README.md  app.py  pyproject.toml  rag_agent.py
Projeto_2/static/css/: styles.css
Projeto_2/static/js/: app.js
Projeto_2/templates/: index.html
