[project]
name = "proj-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv-python>=0.0.1",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.11",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "python-dotenv==1.0.0",
    "sentence-transformers>=5.2.2",
]
